--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,41 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #666;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.input-default {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  width: 100%;
+  font-size: 25px;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button-default {
+  background-color: white;
+  border-bottom: 1px solid white;
+  color: #666;
+  width: 100%;
+  font-size: 20px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-default:focus{
+  outline: none;
+}
+
+.button-default:hover {
+  cursor: pointer;
 }
