--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@
   padding: 5px;
 }
 
+.select-default {
+  background-color: white;
+  border-bottom: 1px solid white;
+  color: #666;
+  font-size: 20px;
+  padding: 5px;
+}
+
 .input-default:focus{
   outline: none;
 }
